Get all delegations v1 and v2, OpenAPI endpoints added
